# SFMLSpriter

./: .gitignore  CMakeLists.txt  license.txt  readme.mediawiki
cmake_modules/: FindRapidXML.cmake  FindSFML.cmake
include/SFMLSpriter/: API.hpp  Animation.hpp  Character.hpp  Frame.hpp  SimpleTextureManager.hpp  TextureManager.hpp
src/SFMLSpriter/: Animation.cpp  Character.cpp  Frame.cpp  SimpleTextureManager.cpp
test/: CMakeLists.txt  main.cpp
